# my_machine_learning

./: CMakeLists.txt  main.cpp  mine.pptx
src/: ants.cpp  ants.h  classify.cpp  classify.h  kpga.cpp  kpga.h  qlearning.cpp  qlearning.h  rand.cpp  rand.h
